src/test/ui/macros/macro-use-bad-args-2.rs
#![no_std]

#[allow(unused_extern_crates)]
#[macro_use(foo="bar")]  //~ ERROR bad macro import
extern crate std;

fn main() {}
